# paymage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.payroll-prover  Makefile  README.md  Trunk.toml  deny.toml
ai/_archive/design/: 2026-06-25-feature-x402-agent-privacy-pool.md  2026-06-26-feature-compliant-intent-privacy-pool.md  2026-06-26-feature-psy-privacy-rollup.md.bak  2026-06-26-feature-trust402-zk-identity-sdk.md.bak
ai/_archive/implementation/: 2026-06-25-feature-x402-agent-privacy-pool.md
ai/_archive/planning/: 2026-06-25-feature-x402-agent-privacy-pool.md  2026-06-26-feature-compliant-intent-privacy-pool.md  2026-06-26-feature-psy-privacy-rollup.md.bak  2026-06-26-feature-trust402-zk-identity-sdk.md.bak
ai/_archive/requirements/: 2026-06-25-feature-x402-agent-privacy-pool.md  2026-06-26-feature-compliant-intent-privacy-pool.md  2026-06-26-feature-psy-privacy-rollup.md.bak  2026-06-26-feature-trust402-zk-identity-sdk.md.bak
ai/_archive/testing/: 2026-06-25-feature-x402-agent-privacy-pool.md
ai/deployment/: 2026-06-28-feature-zk-payroll.md
ai/design/: 2026-06-28-feature-zk-payroll.md
ai/implementation/: 2026-06-28-feature-zk-payroll.md
ai/monitoring/: 2026-06-28-feature-zk-payroll.md
ai/planning/: 2026-06-28-feature-zk-payroll.md
ai/requirements/: 2026-06-28-feature-zk-payroll.md
ai/review/: 2026-07-03-feature-zk-payroll.md
ai/testing/: 2026-06-28-feature-zk-payroll.md
app/crates/payroll-prover/: Cargo.toml
app/crates/payroll-prover/src/: lib.rs
app/crates/poseidon-wasm/: Cargo.toml
app/crates/poseidon-wasm/src/: lib.rs
circuits/: build.rs
circuits/src/: payroll.circom  payrollWithdraw.circom  payrollWithdraw_10.circom  payroll_10_10.circom  payroll_20.circom
circuits/src/test/: mod.rs  prove_payroll.rs
contracts/paymage-attestation-verifier/: Cargo.toml
contracts/paymage-attestation-verifier/src/: lib.rs
contracts/payroll/: Cargo.toml
contracts/payroll/src/: lib.rs  payroll.rs  test.rs
deployments/scripts/: deploy-payroll.sh
deployments/testnet/: deployments.json
deployments/testnet/circuit_keys/: README.md
docs/: demo-video-script.md  dorahack-submission.md  scf-grant-proposal.md
e2e-tests/: Cargo.toml
e2e-tests/src/tests/: e2e_payroll.rs  mod.rs
marketing-video/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
marketing-video/src/: PayMageDemo.tsx  Root.tsx
tools/payroll-prover-service/: Cargo.toml
tools/payroll-prover-service/src/: main.rs
zk-payroll-dashboard/: .env.example  .gitignore  CLAUDE.md  middleware.ts  package-lock.json  package.json  playwright.config.ts
zk-payroll-dashboard/__tests__/: env.test.ts  middleware.test.ts  zk.demoProof.test.ts  zk.engine.test.ts  zk.serialize.real.test.ts
zk-payroll-dashboard/__tests__/smoke/: payroll-initiation.test.tsx
zk-payroll-dashboard/app/: globals.css  layout.tsx
zk-payroll-dashboard/e2e/: payroll-server-proof.spec.ts
zk-payroll-dashboard/lib/: env.ts  ipfs.ts
zk-payroll-dashboard/lib/zk/: engine.ts  (+17 more)
zk-payroll-dashboard/scripts/: seed-demo-payroll.ts
zk-payroll-dashboard/stores/: employees.ts  viewKeys.ts
zk-payroll-dashboard/types/: models.ts  stellar.ts
(+58 files in other folders)
