[package]
name = "payroll-prover-service"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "payroll_prover_service"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-circom = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { workspace = true }
ark-std = { workspace = true, features = ["getrandom", "std"] }
serde_json = { workspace = true }
serde = { workspace = true }
wasmer = { workspace = true, features = ["cranelift"] }
witness = { workspace = true }

[lints]
workspace = true
