[package]
name = "payroll-prover"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "Browser WASM Groth16 prover for the payroll circuit — runtime-loaded keys (IndexedDB-cached)"

# wasm-pack invokes wasm-opt by default; it fails on the bulk-memory ops
# emitted by recent Rust + wasmer. Release LTO is already applied by cargo,
# so skip wasm-opt entirely.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# internal
prover = { workspace = true }
witness = { workspace = true }
# external
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = { workspace = true, features = ["cranelift"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { workspace = true, features = ["js", "js-default"] }
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
